# cPodFactory

./: .gitignore  LICENSE  README.md  add_host.sh  cpod_lease.sh  cpod_lease.sh-bckp  cpodctl  cpodctl-completion.sh  create_cpod.sh  data  data-bkp  delete-file.sh  delete_cpod.sh  delete_guest_user.sh  deploy_vcsa.sh-old  env  env-dell  env-dxb  env-fkd  env-hp  env-intel  env-lab  env-lhr  env-mad  env-muc  env-ovh  env-stc  env-techdata  env.backup  env.old  generate_cpod_version_file.sh  generate_vcf_version_file.sh  govc_env-example  govc_env-from-var  info_cpod.sh  info_factory.sh  licenses.key.example  licensing_cpod.sh  list_bits_big_files.sh  list_cpod.sh  (+12 more)
.github/workflows/: tests.yml
api/: hello.py
compute/: add_esx.sh  cloudbuilder-401.json-backup  cloudbuilder-50-light.json  cloudbuilder-50.json  cloudbuilder-domains-v5-light.json  cloudbuilder-domains-v5.json  cloudbuilder-domains.json  cloudbuilder-networkpool.json  cloudbuilder.json-template-vlans  cloudbuilder_lab_settings.sh  cpod-xxx_env  cpod-xxx_env.backup  create_resourcepool.ps1  create_resourcepool.ps1-bkp  create_resourcepool.sh  create_snapshot.ps1  create_snapshot.sh  create_vapp.ps1  delete_resourcepool.ps1.backup  delete_resourcepool.sh  delete_vapp.ps1  delete_vapp.sh  deploy_filer.sh  dnsmasq.conf-vcf  fallback_promiscuous.ps1  fallback_promiscuous.sh  generate_cloudbuilder.sh  generate_sddc_vi.sh  generate_sddc_vi_same_cpod.sh  list_cpod.sh  list_portgroup.sh  list_snapshot.ps1  list_snapshot.sh  list_vapp.ps1  list_vapp.sh  modify_portgroup.ps1-bkp  prep_and_add_esx.sh  prep_esx_vlan.ps1  prep_esx_vlan.sh  psc-65.json  (+34 more)
compute/mac_learning/: modify_portgroup.ps1
compute/promiscuous/: modify_portgroup.ps1
docs/: TIPS.md  cpodfactory_operations_guide_toc.md  usermanual.md
docs/setup/: cpodfactory_setup_fix-vlan-shift.md  cpodfactory_setup_git.md  cpodfactory_setup_manual.md  cpodfactory_setup_manual_2.md  start-with-cpod.md
extra/: add_filer.sh  capacity_check.sh  check_size.sh  check_space.sh  configure_nsxalb_atside.sh  configure_nsxalb_defaultcloud.sh  configure_nsxt_atside.sh  configure_nsxt_atside_maz_az-config.sh  configure_nsxt_atside_maz_az-tier0.sh  configure_nsxt_atside_maz_init.sh  configure_vcsa_maz-nsxt.ps1  configure_vcsa_maz-nsxt.sh  configure_vcsa_maz.sh  configure_vcsa_maz_enable_drs_vsan.ps1  create_new_template.ps1  create_new_template.sh  create_vds_nsxt.ps1  create_vds_nsxt.sh  create_vds_sivt.ps1  create_vds_sivt.sh  create_vds_vlans.ps1  create_vds_vlans.sh  create_vds_vsan.ps1  create_vds_vsan.sh  create_vds_vsan_nsxt.ps1  create_vds_vsan_nsxt.sh  delete_photonos_cday_pcli.sh  deploy_cloudbuilder.sh  deploy_darkstar.sh  deploy_fortytwo.sh  deploy_fortytwo_atside.sh  deploy_grease-monkey.sh  deploy_hci.sh  deploy_jumpbox.sh  deploy_nsx-v.sh  deploy_nsxalb.sh  deploy_nsxt_mgr.sh  deploy_nsxt_mgr_v4.sh  deploy_ova_at_side.sh  deploy_photonos_cday_mail.sh  (+38 more)
extra/deploy_nsx-t/: configure_nsx.env.bak  install_nsx.env
install/: 1-update.sh  gen-motd-cpodedge-rainbow.sh  gen-motd-cpodrouter.sh  motd  update-node-exporter-cpodrouters.sh
install/Backup-Conf/: HP-FF-5700.conf  MLNX-Switch01.conf  MLNX-Switch02.conf
install/V2SAN/: VsanSetFakeSCSIReservations.ps1
install/acme.sh/: acme.sh.env  http.header  renewal.sh
install/at-package/at-3.1.23/: at.1.in  at.allow.5.in  at.c  atd.8.in  atd.c  atd.service.in  atrun.8.in  batch.in  config.h.in  configure  configure.ac  daemon.c  dist  getloadavg.c  panic.c  parsetime.y  perm.c  posixtm.h  privs.h  release
install/esx-iso-image-maker/: esxi_ks_iso.sh
install/etc/: ntp.conf
install/html/: index-ref.html  index-site.html  index.html  index.html-old  index2.html  index3.html  index_bkp_300118.html  skull.html
install/nested-esx/: local.sh
install/network/: eth0-static.network  eth2-static.network
install/pxe/: dnsmasq.conf
install/sbin/: bgpd  libreadline.so.6  vtysh
install/systemd/: backup.timer  docker-container@syncthing.service  iptables-az-demo  iptables.cpod-isolation
network/: add_bgp_neighbour.sh  create_nested_tz.sh  create_vlan_portgroup.sh  delete_vlan_portgroup.ps1  get_routing.sh  id_transportzone.sh  list_transportzone.sh  nested-tz.json  props_dvs.sh  update_dvs_mtu.sh
solutions/: cpod_alb.sh  cpod_default.sh  cpod_default_vsanOSA.sh  cpod_multi-az-nsxt-test.sh  cpod_multi-az-nsxt.sh  cpod_nsxt_v3.sh  cpod_nsxt_v4.sh  cpod_sddc_full.sh  cpod_sddc_light.sh  cpod_sivt_tkgm.sh  cpod_sivt_tkgs.sh  cpod_vcf.sh  cpod_vxrack.sh
src/: add_host.sh  conf_esx.sh  cpod_lease.sh  cpodctl  create_cpod.sh  delete_cpod.sh  deploy_vcsa.sh  enter_maintenance_cpod.sh  env  env-dxb  env-fkd  env-lab  env-lhr  env-mad  env-muc  env-ovh  env-stc  env-wdc  env.passwd-template  expose_cpod.sh  generate_cpod_version_file.sh  info_cpod.sh  info_factory.sh  info_shwrfr.sh  licensing_cpod.sh  list_cpod.sh  list_cpod_bgp_peering.sh  password_cpod.sh  prep_cpod.sh  slack_motd.sh  slack_motd.txt  smoke_test.sh  update_network.sh  update_network_cpodrouter.sh  vlan.sh
src/compute/: WIP-proxy.sh  airgapped.sh  bgpd.conf-vcf  cloudbuilder-401.json  cloudbuilder-43.json  cloudbuilder-45.json  cloudbuilder-hosts.json  cloudbuilder-vi-host-template.json  cloudbuilder.json-template-no-vlan  cpod_ip.sh  create_resourcepool.sh  create_vapp.sh  delete_resourcepool.sh  delete_vapp.sh  deploy_filer.ps1  deploy_filer.sh  fallback_promiscuous.sh  generate_cloudbuilder.sh  generate_sddc_vi.sh  list_cpod.sh  list_datacenter.sh  list_portgroup.sh  list_vapp.sh  modify_portgroup.ps1  modify_portgroup.sh  prep_esx_vlan.sh  prep_vcsa.ps1  prep_vcsa.ps1-bkp  prep_vcsa.sh  prep_vcsa.sh-bkp  put_esx_maintenance_mode.sh  remove_orphaned.sh  sddc_deploy_wld0_CB.sh  sddc_generate_ems.sh  session_vcenter.sh  start_vapp.ps1  start_vapp.sh  stop_vapp.sh  vcsa-65.json-psc-small
src/extra/: add_filer.sh  backup_vm.sh  capacity_check.sh  check_datastore.sh  check_space.sh  clean_ssh.sh  configure_nsxalb_atside.sh  configure_sivt.sh  create_new_template_ks.cfg  (+61 more)
test/: Dockerfile  build-test-container.sh  run-test-container.sh  test.bats
(+265 files in other folders)
